--- a/Details_bootstrapTest/CSS/styles.css
+++ b/Details_bootstrapTest/CSS/styles.css
@@ -47,12 +47,19 @@ body {
   padding: 1rem 0;
 }
 
+/*
+=======================================
+==>        Top Information
+=======================================
+*/
+
 .container__top {
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #ffffff;
-  border-radius: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
   margin-bottom: 2.5rem;
   padding: 2.5rem 1.5rem;
 }
@@ -72,6 +79,7 @@ body {
   color: var(--FISD-dark-blue);
   letter-spacing: 1px;
   padding-bottom: 0.5rem;
+  font-family: "Roboto", sans-serif !important;
 }
 
 .top__title p,
@@ -88,8 +96,8 @@ body {
 .top__img {
   height: 40rem;
   overflow: hidden;
-  border-radius: 0.5rem;
   box-shadow: 0 14px 24px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  border-radius: 0.5rem;
 }
 .top__img img {
   width: 100%;
@@ -97,6 +105,7 @@ body {
   object-position: right;
 }
 .top__info {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -109,32 +118,63 @@ body {
 .top__info-extra {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 0.7rem;
+}
+
+.info-extra__icon,
+.info-extra__title {
+  padding: 0.5rem 0.25rem;
+}
+
+.top__info-extra div p {
+  color: var(--FISD-light-blue);
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+  font-family: "Roboto", sans-serif !important;
+}
+
+.info-extra__title {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.top__info-extra p:nth-child(odd) {
-  color: var(--FISD-dark-blue);
-  font-size: 1.2rem;
-  font-weight: 550;
-}
-.top__info-extra p em {
-  padding-right: 0.25rem;
-}
-.top__info-extra p:nth-child(even) {
+
+.info-extra__icon em {
+  font-size: 4rem;
   color: var(--FISD-light-blue);
-  margin: 0.5rem 0;
 }
+
+.top__info-extra div span {
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  color: var(--FISD-dark-blue);
+}
+
 .percentage {
   width: 100%;
   text-align: center;
-  background-color: var(--FISD-light-orange);
-  color: #fafafa !important;
+  background-color: transparent;
+  color: var(--FISD-light-blue) !important;
   border-radius: 0.25rem;
 }
 
-/*****************************
-      UPDATE Section
-******************************/
+.top__description {
+  width: 90%;
+  padding: 1.5rem 1rem;
+  color: var(--FISD-dark-blue);
+  line-height: 2.6rem;
+  font-size: 1.9rem;
+  letter-spacing: 0.1rem;
+  text-align: left;
+}
+/*
+=======================================
+==>        UPDATE Section
+=======================================
+*/
 
 .container__middle {
   width: 100vw;
@@ -143,9 +183,10 @@ body {
   align-items: center;
   justify-content: space-around;
   margin-bottom: 1.5rem;
-  padding: 2.5rem 4.5rem;
+  padding: 2.5rem 5rem;
   background-color: #184366;
   background-image: linear-gradient(135deg, #184366 0%, #5ab3c4 100%);
+  overflow: hidden;
 }
 
 .middle-title h1 {
@@ -161,8 +202,8 @@ body {
 }
 
 .middle__news {
-  width: 30rem;
-  height: 38rem;
+  width: 31.5rem;
+  height: 38.5rem;
   border-radius: 0.25rem;
   box-shadow: 0px 15px 10px -15px #111;
   background-color: #ffffff;
@@ -190,24 +231,26 @@ body {
   color: var(--FISD-dark-blue);
   letter-spacing: 1px;
   padding: 1rem 0;
-  font-size: 1.8rem;
+  font-size: 1.8rem !important;
+  font-family: "Roboto", sans-serif !important;
 }
 
-.bottom__description {
+.bottom__description p {
   color: var(--FISD-dark-blue);
   line-height: 1.5rem;
   font-size: 1.2rem;
+  font-family: "Roboto", sans-serif !important;
 }
 
-/******************************
-
-    Bottom Image gallery 
-
-******************************/
+/*
+=======================================
+==>     Project Image gallery  
+=======================================
+*/
 
 .container-bottom {
   width: 100%;
-  background-color: #ffffff;
+  background-color: transparent;
   border-radius: 0.5rem;
   padding: 2.5rem 1.5rem;
 }
@@ -250,11 +293,11 @@ img {
   }
 }
 
-/************************************
-
-                Mobile
-
-************************************/
+/*
+=======================================
+==>           Mobile 
+=======================================
+*/
 
 @media (max-aspect-ratio: 1/1) and (max-width: 580px) {
   .containerApp {
@@ -331,10 +374,4 @@ img {
     width: 100%;
     height: 200px;
   }
-
-  /******************************
-  
-      Swiper End
-  
-  ******************************/
 }
