--- a/bootstrapTest/CSS/styles.css
+++ b/bootstrapTest/CSS/styles.css
@@ -333,6 +333,7 @@ select option {
   width: 100%;
   height: 17rem;
   overflow: hidden;
+  position: relative;
 }
 
 .items-head img {
@@ -342,6 +343,22 @@ select option {
   object-position: top left;
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
+}
+
+.img-container__label {
+  position: absolute;
+  z-index: 100;
+  width: 8.5rem;
+  height: 3rem;
+  top: 0;
+  right: 0;
+  border-bottom-left-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+  background-color: var(--FISD-light-orange);
+  color: #dfdfdf;
+  font-weight: bolder;
+  padding: 0.5rem;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .item-wrapper {
