--- a/Fetch_BootstrapTest/CSS/styles.css
+++ b/Fetch_BootstrapTest/CSS/styles.css
@@ -1,3 +1,4 @@
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 :root {
@@ -43,9 +44,12 @@ h1 {
   margin-top: 1.5rem;
 }
 
-/****************************************
-*            Search Form
-****************************************/
+
+/*
+=========================================
+==>            Search Form
+=========================================
+*/
 
 .search-form {
   display: flex;
@@ -120,7 +124,7 @@ select option {
   display: flex;
   flex-direction: column;
   width: 50%;
-  padding: 0.5rem;
+  padding: 0 0.5rem;
   flex-grow: 1;
 }
 
@@ -144,19 +148,12 @@ select option {
   align-items: center;
 }
 
-.notFound__img,
 .notFound__text {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-}
-
-.notFound__img img {
-  width: 50rem;
-  height: auto;
-  padding: 2.5rem 0.5rem;
 }
 
 .notFound__text {
@@ -181,9 +178,14 @@ select option {
   font-size: 2.5rem;
   font-weight: bold;
 }
-/****************************************
-*         More Info Grid btn
-****************************************/
+
+
+/*
+=========================================
+==>       More Info Grid btn 
+=========================================
+*/
+
 
 .more__info-plus {
   display: flex;
@@ -221,9 +223,13 @@ select option {
   opacity: 0.9;
 }
 
-/****************************************
-*            More Buttons
-****************************************/
+
+/*
+=========================================
+==>          More Buttons  
+=========================================
+*/
+
 
 .btn-more {
   width: 100%;
@@ -289,9 +295,11 @@ select option {
   font-size: 1.5rem;
 }
 
-/****************************************
-*            Cards Sections
-****************************************/
+/*
+=========================================
+==>          Cards Sections  
+=========================================
+*/
 
 .cards-container {
   margin-top: 1rem;
@@ -300,13 +308,13 @@ select option {
   justify-content: space-around;
   align-items: flex-start;
   flex-wrap: wrap;
-  padding: 0.5rem;
+  padding: 0.5rem 3rem;
 }
 
 .searched-items {
   width: 33rem;
   height: 53rem;
-  margin: 1.8rem 0;
+  margin: 1.8rem;
   display: flex;
   flex-direction: column;
   align-items: space-between;
@@ -349,7 +357,7 @@ select option {
   position: absolute;
   z-index: 100;
   width: 10rem;
-  height: 3rem;
+  height: 3.5rem;
   top: 0;
   right: 0;
   border-bottom-left-radius: 0.5rem;
@@ -357,9 +365,13 @@ select option {
   color: #e6e7e8;
   font-weight: bolder;
   letter-spacing: 1px;
-  padding: 0.5rem 1rem;
+  padding: 0.8rem 1rem;
   box-shadow: 0 10px 20px rgba(255, 255, 255, 0.19),
     0 6px 6px rgba(247, 245, 245, 0.23);
+}
+
+.img-container__label p {
+  font-size: 1.4rem !important;
 }
 
 .item-wrapper {
@@ -390,34 +402,30 @@ select option {
 
 .short-info-holders {
   flex: auto;
+  background: transparent !important;
+  border: none;
 }
 .progress-bar {
-  position: relative;
-  border: 1px solid var(--FISD-light-orange);
-  background-color: #92979b;
+  background-color: transparent !important;
   border-radius: 0.25rem;
   height: 25px;
   width: 100px;
-}
-.progress-bar-fill {
-  height: 100%;
-
-  background-color: var(--FISD-light-orange);
-  transition: width 0.5s;
-  z-index: 98;
+  font-size: 1rem;
+  box-shadow: none;
 }
 
 .progress-bar-value {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  color: #ffffff;
-  z-index: 99;
+  color: #92979b;
+  font-weight: bolder;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-top: 0.5rem;
+  background-color: transparent !important;
 }
-
+.progress-bar-value p {
+  font-size: 1.4rem;
+}
 .items-short-info .fas {
   margin: 0.5rem;
   color: var(--FISD-light-orange);
@@ -497,6 +505,20 @@ h2 {
   display: flex;
 }
 
+.FISD_orange{
+  color: var(--FISD-light-orange); 
+}
+
+.newDate{
+  margin-left: 0.5rem;
+}
+
+/*
+=========================================
+==>       Media Query 787px   
+=========================================
+*/
+
 @media screen and (max-width: 787px) {
   body {
     background-color: #dfdfdf !important;
@@ -556,3 +578,186 @@ h2 {
     order: 2;
   }
 }
+
+
+/*
+=======================================
+==>        Animations  
+=========================================
+*/
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.animated.infinite {
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+
+.animated.delay-1s {
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
+.animated.delay-1shalf {
+  -webkit-animation-delay: calc(1s * 1.5);
+  animation-delay: calc(1s * 1.5);
+  -webkit-animation-delay: calc(1s * 1.5);
+  animation-delay: calc(1s * 1.5);
+}
+
+.animated.delay-2s {
+  -webkit-animation-delay: calc(1s * 2);
+  animation-delay: calc(1s * 2);
+  -webkit-animation-delay: calc(1s * 2);
+  animation-delay: calc(1s * 2);
+}
+
+.animated.delay-2shalf {
+  -webkit-animation-delay: calc(1s * 2.5);
+  animation-delay: calc(1s * 2);
+  -webkit-animation-delay: calc(1s * 2.5);
+  animation-delay: calc(1s * 2.5);
+}
+
+.animated.delay-3s {
+  -webkit-animation-delay: calc(1s * 3);
+  animation-delay: calc(1s * 3);
+  -webkit-animation-delay: calc(1s * 3);
+  animation-delay: calc(1s * 3);
+}
+
+.animated.delay-3shalf {
+  -webkit-animation-delay: calc(1s * 3.4);
+  animation-delay: calc(1s * 3);
+  -webkit-animation-delay: calc(1s * 3.4);
+  animation-delay: calc(1s * 3.4);
+}
+
+.fadeInRight {
+  -webkit-animation-name: fadeInRight;
+  animation-name: fadeInRight;
+}
+
+.fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+
+/************************
+=       Fade Right
+*************************/
+@-webkit-keyframes fadeInRight {
+  from {
+    opacity: 0;
+    /*-webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);*/
+    -webkit-transform: translate3d(50px, 0, 0);
+    transform: translate3d(50px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    /*-webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);*/
+    -webkit-transform: translate3d(50px, 0, 0);
+    transform: translate3d(50px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+/************************
+=       Fade Left
+*************************/
+@-webkit-keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    /*-webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);*/
+    -webkit-transform: translate3d(-50px, 0, 0);
+    transform: translate3d(-50px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    /*-webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);*/
+    -webkit-transform: translate3d(-50px, 0, 0);
+    transform: translate3d(-50px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+/************************
+=       Fade UP
+*************************/
+@-webkit-keyframes fadeInUp {
+  from {
+    opacity: 0;
+    visibility: hidden;
+    /*-webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);*/
+    -webkit-transform: translate3d(0, 40px, 0);
+    transform: translate3d(0, 40px, 0);
+  }
+  to {
+    opacity: 1;
+    /*visibility: visible;*/
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    visibility: hidden;
+    /*-webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);*/
+    -webkit-transform: translate3d(0, 40px, 0);
+    transform: translate3d(0, 40px, 0);
+  }
+  to {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+/*
+=======================================
+==>        END-Animations  
+=======================================
