--- a/Details_bootstrapTest/CSS/styles.css
+++ b/Details_bootstrapTest/CSS/styles.css
@@ -64,14 +64,47 @@ body {
   padding: 2.5rem 1.5rem;
 }
 
-.top__title {
+.top__info-isComplete {
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 1rem 0;
+  padding: 0.5rem;
+}
+
+.top__title,
+.isComplete {
+  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   margin: 1rem 0;
   padding: 0.5rem;
+}
+.isComplete {
+  position: relative;
+  width: 15%;
+}
+
+.isComplete__label {
+  margin-top: ;
+  position: absolute;
+  z-index: 100;
+  width: 12.5rem;
+  height: 3rem;
+  top: 0;
+  right: 0;
+  background-color: var(--FISD-light-orange);
+  color: #e6e7e8;
+  font-weight: bolder;
+  font-size: 1.5rem;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .top__title h1 {
