--- a/Details_bootstrapTest/CSS/styles.css
+++ b/Details_bootstrapTest/CSS/styles.css
@@ -83,6 +83,16 @@ body {
   margin: 1rem 0;
   padding: 0.5rem;
 }
+
+.top__title_middle {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 1rem 0;
+  padding: 0.5rem;
+}
 .isComplete {
   position: relative;
   width: 15%;
